maintainIT2/src/objects/Part__c.object
<CustomObject>
    <description>Parts Master</description>
    <fields>
        <fullName>ABC_Code__c</fullName>
        <description>ABC Code - User Specified</description>
        <inlineHelpText>ABC Code - User Specified</inlineHelpText>
        <label>ABC Code</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auto_Order__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If Auto Order = True, then this Part will be available for the Batch Purchase Order create process.</description>
        <inlineHelpText>If Auto Order = True, then this Part will be available for the Batch Purchase Order create process.</inlineHelpText>
        <label>Auto Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_Qty__c</fullName>
        <description>Available Qty = On Hand Qty - Open Commit Qty</description>
        <formula>IF( On_Hand_Qty__c  -  Open_Commit_Qty__c  &lt; 0, 0, On_Hand_Qty__c  -  Open_Commit_Qty__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Available Qty = On Hand Qty - Open Commit Qty</inlineHelpText>
        <label>Available Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bin_Location__c</fullName>
        <description>Bin Location - Concatenated String of Bin Seg 1 thru Bin Seg 5</description>
        <formula>TEXT(Loc_1__c)   &amp; &quot;-&quot; &amp;  TEXT(Loc_2__c) &amp; &quot;-&quot; &amp;  TEXT(Loc_3__c) &amp; &quot;-&quot; &amp;  TEXT(Loc_4__c)   &amp; &quot;-&quot; &amp;  TEXT(Loc_5__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Bin Location - Concatenated String of Loc 1 thru Loc 5</inlineHelpText>
        <label>Bin Location-Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commodity_Code__c</fullName>
        <description>Commodity Code - User Specified</description>
        <inlineHelpText>Commodity Code - User Specified</inlineHelpText>
        <label>Commodity Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criticality_Code__c</fullName>
        <description>User Definable Criticality Code to Support RCM Processes</description>
        <inlineHelpText>User Definable Criticality Code to Support RCM Processes</inlineHelpText>
        <label>Criticality Code</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cycle_Count_Group__c</fullName>
        <description>Cycle Count Group is a user defined picklist for categorizing parts for cycle count selection</description>
        <inlineHelpText>Cycle Count Group is a user defined picklist for categorizing parts for cycle count selection</inlineHelpText>
        <label>Cycle Count Group</label>
        <picklist>
            <picklistValues>
                <fullName>Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dec</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Part Description - User Defined</description>
        <inlineHelpText>Part Description</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Part__c</fullName>
        <description>Non-Validated Part # used in external ERP/Purchasing system</description>
        <inlineHelpText>Non-Validated Part # used in external ERP/Purchasing system</inlineHelpText>
        <label>ERP Part #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Description__c</fullName>
        <description>Part ID &amp; Description Concatenated for ease of Grouping on Reports</description>
        <formula>Name &amp; &quot; &quot; &amp;  Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Part ID &amp; Description Concatenated for ease of Grouping on Reports</inlineHelpText>
        <label>ID &amp; Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Item Master</description>
        <inlineHelpText>Item Master</inlineHelpText>
        <label>Item Master</label>
        <referenceTo>Item_Master__c</referenceTo>
        <relationshipLabel>Storeroom Parts</relationshipLabel>
        <relationshipName>Storeroom_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Cycle_Count_Date__c</fullName>
        <description>Last Cycle Count Date</description>
        <inlineHelpText>Last Cycle Count Date</inlineHelpText>
        <label>Last Cycle Count Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Gain_Date__c</fullName>
        <description>Last Gain Date. Populated via work flow.  Field should be set to Read Only for all user profiles.</description>
        <inlineHelpText>Last Gain Date. Populated via work flow.</inlineHelpText>
        <label>Last Gain Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_In_Cost__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Last In Cost (based on the Unit Cost during the last Receipt type Part Transaction).  System populated via workflow.  Field security should be set to read only for all profiles.</description>
        <inlineHelpText>Last In Cost (based on the Unit Cost during the last Receipt type Part Transaction).  System populated via workflow.  Field security should be set to read only for all profiles.</inlineHelpText>
        <label>Last In Cost</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Issue_Date__c</fullName>
        <description>Last Issue Date.  System populated via workflow.  Field security should be set to read only for all profiles.</description>
        <inlineHelpText>Last Issue Date.  System populated via workflow.  Field security should be set to read only for all profiles.</inlineHelpText>
        <label>Last Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Order_Date__c</fullName>
        <description>Last Order Date.  System populated via workflow. Field security should be set to read only for all profiles.</description>
        <inlineHelpText>Last Order Date.  System populated via workflow. Field security should be set to read only for all profiles.</inlineHelpText>
        <label>Last Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Price_Update__c</fullName>
        <description>Last Date when Purchase Price from Preferred Vendor was updated.  System populated via Workflow.  Field security should be set to Read Only for all User Profiles.</description>
        <inlineHelpText>Last Date when Purchase Price from Preferred Vendor was updated.  System populated via Workflow.  Field security should be set to Read Only for all User Profiles.</inlineHelpText>
        <label>Last Price Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Receipt_Date__c</fullName>
        <description>Last Receipt Date.  System populated via workflow. Field security should be set to read only for all profiles.</description>
        <inlineHelpText>Last Receipt Date.  System populated via workflow. Field security should be set to read only for all profiles.</inlineHelpText>
        <label>Last Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Shrink_Date__c</fullName>
        <description>Last Shrink Date will be populated via workflow when a Part Transaction of type Shrink will be created.</description>
        <inlineHelpText>Last Shrink Date will be populated via workflow when a Part Transaction of type Shrink will be created</inlineHelpText>
        <label>Last Shrink Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Lead Time (Days)</description>
        <inlineHelpText>Lead Time in Days</inlineHelpText>
        <label>Lead Time</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loc_1__c</fullName>
        <description>Location 1</description>
        <inlineHelpText>Row (Segment 1 of Row-Section-Level-Bin-Divider)</inlineHelpText>
        <label>Row-Deprecated</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loc_2__c</fullName>
        <description>Location 2</description>
        <inlineHelpText>Section (Segment 2 of Row-Section-Level-Bin-Divider)</inlineHelpText>
        <label>Section-Deprecated</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loc_3__c</fullName>
        <description>Location 3</description>
        <inlineHelpText>Level; Shelf or Drawer (Segment 3 of Row-Section-Level-Bin-Divider)</inlineHelpText>
        <label>Level-Deprecated</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Part Manufacturer.  Lookup to Account where Manufacturer = True</description>
        <inlineHelpText>Part Manufacturer.  Lookup to Account where Manufacturer = True</inlineHelpText>
        <label>Manufacturer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Manufacturer__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Manufacturer Parts</relationshipLabel>
        <relationshipName>Mfg_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Maximum desired &quot;Available&quot; Qty for inventory replenishment calculations</description>
        <inlineHelpText>Obsolete Field - Do Not Use</inlineHelpText>
        <label>Obsolete</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mfg_Part__c</fullName>
        <description>Manufacturer Part #</description>
        <inlineHelpText>Manufacturer Part #</inlineHelpText>
        <label>Mfg Part #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Min_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Minimum desired &quot;Available&quot; Qty for inventory replenishment calculations</description>
        <inlineHelpText>Obsolete Field - Do Not Use</inlineHelpText>
        <label>Obsolete</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nameplate_Data__c</fullName>
        <description>The Nameplate Data field allows you to enter up to 255 characters of information about the part on separate lines. - User Defined</description>
        <inlineHelpText>The Nameplate Data field allows you to enter up to 255 characters of information about the part on separate lines.</inlineHelpText>
        <label>Nameplate Data</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Old_Part__c</fullName>
        <description>This field is used for holding the old (legacy) part number from a previous system</description>
        <inlineHelpText>This field is used for holding the old (legacy) part number from a previous system</inlineHelpText>
        <label>Old Part #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Hand_Qty_Value__c</fullName>
        <description>On Hand Qty Value = Unit Value * On Hand Qty</description>
        <formula>Unit_Value__c  *   On_Hand_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>On Hand Qty Value = Unit Value * On Hand Qty</inlineHelpText>
        <label>On Hand Qty Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>On_Hand_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>On Hand Qty measured in Stock UOM.  System populated via workflow.  Field security should be set to read only for all profiles.</description>
        <inlineHelpText>On Hand Qty.  System pupoluated via workflow.  Field security should be set to read only for all profiles.</inlineHelpText>
        <label>On Hand Qty</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Order_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>On Order Qty = Sum of Order Qty - Sum of Receipt Qty measured in Stock UOM.  System populated value via workflow.  Field security should be set to read only for all profiles.</description>
        <inlineHelpText>On Order Qty = Sum of Order Qty - Sum of Receipt Qty.  System populated value via workflow.  Field security should be set to read only for all profiles.</inlineHelpText>
        <label>On Order Qty</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Commit_Qty__c</fullName>
        <description>This Qty represents the value of all open qty&apos;s on work orders in a status beyond &quot;In Planning&quot; and not yet &quot;Completed&quot;</description>
        <inlineHelpText>This Qty represents the value of all open qty&apos;s on work orders in a status beyond &quot;In Planning&quot; and not yet &quot;Completed&quot;</inlineHelpText>
        <label>Open Commit Qty</label>
        <summarizedField>WO_Part__c.Open_Commit_Qty__c</summarizedField>
        <summaryForeignKey>WO_Part__c.Part__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Primary_Bin_Loc_OH_Qty__c</fullName>
        <description>On Hand Qty contained in the Primary Bin Location</description>
        <formula>Primary_Bin_Location__r.On_Hand_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Bin Loc OH Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Bin_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Mass issuing parts from the Work Order (Issue Open Commit Qty command button) will be performed against the Primary Bin Location.  Purchase Order receipts will only be received to the Primary Bin Location.</description>
        <label>Primary Bin Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>Warehouse_Bin_Location__c.Part__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Warehouse_Bin_Location__c</referenceTo>
        <relationshipLabel>Parts</relationshipLabel>
        <relationshipName>Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Price__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Purchase Price from Preferred Vendor.  Based on Purchase UOM.</description>
        <inlineHelpText>Purchase Price from Preferred Vendor</inlineHelpText>
        <label>Purchase Price</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_UOM__c</fullName>
        <description>The Purchase UOM is UOM in which Purchase Orders Lines are specified and Purchase Order Transactions occur.  Purchase Order Transactions are extended by the Purchase Pack Qty.  Values adopted from ANSI X12.3 Code List 355 Unit of Measure.</description>
        <inlineHelpText>The Purchase UOM is UOM in which Purchase Orders Lines are specified and Purchase Order Transactions occur.  Purchase Order Transactions are extended by the Purchase Pack Qty.  Values adopted from ANSI X12.3 Code List 355 Unit of Measure.</inlineHelpText>
        <label>Purchase UOM</label>
        <picklist>
            <picklistValues>
                <fullName>AY - Assembly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BX - Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH - Container</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM - Centimeter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CN - Can</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT - Carton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZ - Dozen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EA - Each</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FT - Foot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA - Gallon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GS - Gross</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN - Inch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KT - Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LB - Pound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LT - Liter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR - Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OL - Ounces Liquid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC - Piece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PK - Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL - Pallet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT - Pint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QT - Quart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RE - Reel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RL - Roll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RM - Ream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SH - Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TY - Tray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UN - Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YD - Yard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reorder_Method__c</fullName>
        <description>Reorder Method is used to calculate the Qty to Order of a part - DO NOT EDIT THE AVAILABLE VALUES IN THIS LIST!.  OP-OQ is currently the ONLY valid method and is the default value.</description>
        <inlineHelpText>Reorder Method is used to calculate the Qty to Order of a part - DO NOT EDIT THE AVAILABLE VALUES IN THIS LIST!.  OP-OQ is currently the ONLY valid method and is the default value.</inlineHelpText>
        <label>Reorder Method</label>
        <picklist>
            <picklistValues>
                <fullName>Min-Max</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OP-OQ</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reorder_Point__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The Min Qty represents the Qty that the Available Qty + On Order Qty must be equal to before a reccomended &quot;Qty to Order&quot; is calculated.  Measured in Stock UOM.</description>
        <inlineHelpText>The Min Qty represents the Qty that the Available Qty + On Order Qty must be equal to before a reccomended &quot;Qty to Order&quot; is calculated.</inlineHelpText>
        <label>Min Qty</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reorder_Qty__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The &quot;Purchase Pack Qty&quot; is the Stock UOM to Purchase UOM Conversion Qty.  Value can NOT be updated if the On Order Qty &gt; 0</description>
        <inlineHelpText>The Fixed Order Interval is the &quot;Fixed Qty&quot; amount that will be used to suggest the &quot;Qty to Reorder&quot; when the Reorder Point threshold is met.</inlineHelpText>
        <label>Purchase Pack Qty</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Bin_Loc_OH_Qty__c</fullName>
        <description>On Hand Qty in ALL Secondary Bin Locations</description>
        <formula>On_Hand_Qty__c  -  Primary_Bin_Loc_OH_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>On Hand Qty in all Secondary Bin Locations</inlineHelpText>
        <label>Secondary Bin Loc OH Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Cost__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Standard Cost - User Specified.</description>
        <inlineHelpText>Standard Cost - User Specified.</inlineHelpText>
        <label>Standard Cost</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of Part - DO NOT EDIT THE AVAILABLE VALUES IN THIS LIST!  Unexpected results will occur.</description>
        <inlineHelpText>Status of Part - DO NOT EDIT THE AVAILABLE VALUES IN THIS LIST!  Unexpected results will occur.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>